--- a/Report/final_report.tex
+++ b/Report/final_report.tex
@@ -108,6 +108,10 @@ We would like to thank our supervisors, Dr. Nitish Patel \& Dr. Muhammad Nadeem,
 
 \maketitle
 
+%----------------------------------------------------------------------------------------
+%	ABSTRACT
+%----------------------------------------------------------------------------------------
+
 \begin{abstract}
 
 The Mini Project consists of designing a game on a FPGA device which incorporates one simple tank defence game called Tank Hunting. The overall objective is to learn the process of digital design and logic by practically applying the skills learnt prior to the project.
@@ -145,11 +149,27 @@ The next thing that needed to be considered was how the signal will be passed on
 
 \subsection{Light sensor array and robot orientation}
 
-The project requires a sensor circuit layout such that it can communicate as much information as possible about the current position of the robot to the PSoC, so that the robot can interpret the track well to make an informed decision on where to move to next. After doing much research into the intricacies of line following robots, it became apparent that a line could be followed with as few as two sensors. One sensor immediately on either side of the inside of the line is sufficient to track a line and follow it. These two sensors must be placed as far forward as possible so as to make the deviations of the robot more pronounced and easier to detect \& correct. This would result in the robot being able to follow the lines more smoothly and jerk a lot less than if the sensors were near the axis of the wheels.
+The project requires a sensor circuit layout such that it can communicate as much information as possible about the current position of the robot to the PSoC, so that the robot can interpret the track well to make an informed decision on where to move to next. After doing much research into the intricacies of line following robots, it became apparent that a line could be followed with as few as two sensors.
+
+One sensor immediately on either side of the inside of the line is sufficient to track a line and follow it. These two sensors must be placed as far forward as possible so as to make the deviations of the robot more pronounced and easier to detect \& correct. This would result in the robot being able to follow the lines more smoothly and jerk a lot less than if the sensors were near the axis of the wheels.
 
 In our project it is not sufficient for the robot to follow a line, it must also be able detect intersections and take 90° turns. For this purpose two addition sensors were used, these were placed on either side of the line slightly behind the front two sensors. These were placed forward so that when an intersection is detected by these sensors, there is enough of a braking distance for the robot to brake in time to take a turn at the intersection.
 
 \subsection{PCB Design}
+
+An important decision that needed to made with regards to the PCB design was the use of through-hole mounted (THM) or Surface Mounted Devices (SMD) components.
+
+The use of through hole components allows us to rapidly prototype the board, with ease of switching out components after assembly. As the component leads run through the board and soldered over a larger surface area, through-hole mounted circuit boards offer higher reliability and stronger connections. This is very important in cases where there are extreme accelerations, collisions or high temperatures.
+
+Surface mount technology does not require holes to be drilled through the board, are much smaller, can be automatically placed and can be mounted on both sides of the board. This usually leads to a smaller designs, higher component density, lower cost and faster assembly times. 
+
+In this project, higher reliability and extreme environmental conditions are not of major concern. But the benefits of surface mount technology allowed a quicker design and assembly time for this project. Both sides of this decision were carefully considered and the group came to a decision of going with the use of SMD components.
+
+Other considerations for the PCB design were the routing of the pins to the PSoC, whether the H-Bridges will be connected via traces and the presence of switches for easy operation. The pin assignments to be used for routing the pins to the PSoC were very carefully planned and executed. Much consideration was put into reducing track lengths and making certain that only usable pins were used.
+
+Two bi-polar switches that are easy to operate were used as a power on/off switch for the board and localization LEDs. These were used as it allowed both the PCB and the localization LEDs to be individually turned on and off, this was important when sharing the maze with other groups' robots without interference. In addition two 2-DIP switches were added to enable easy switching between the various modes and configurations of the robot.
+
+Connecting the H-bridges via traces would result in a cleaner design with no rogue wires, but would come at the expense of having more long pins connecting the PCB to the daughterboard, which would cause headaches when assembling the two together. A decision was taken to connect via traces as we realized that the board need not be connected together many times and that this little inconvenience was well worth the much tidier robot connections.
 
 \subsection{Testing and Verification}
 
@@ -175,6 +195,12 @@ On the other hand the A* algorithm is a much better transversal algorithm in mos
 \subsection{Motion Control \& PID}
 
 \subsection{RF \& Bluetooth}
+
+RF and Bluetooth are two methods of wireless communication that the robot can interface with. With RF communication, the serial stream coming from the projector control computer can be received as in binary form as a C Struct or a space separated ASCII string. The ASCII string is human readable and easier to work with initially. The processing time required to convert this into something usable is much greater than for receiving and storing the binary C Struct. The coding required to achieve this is more tedious and repetitive but much easier than the binary method. As a result of weighing both sides, we decided to use the binary form C Struct method of RF reception.
+
+The Bluetooth module used enabled bi-direction wireless communication between the robot and a computer. This present numerous oppurtunities, a few of which were explored in this project. The possibility of Bluetooth boot loading the PSoC was on of the more ambitious ideas that was considered. After setting this up, it was found that it took 45+ seconds to download the program to the PSoC over Bluetooth and it was prone to cut-outs due to signal loss. Due to this, this possibility was not explored any further and was not used in the final project.
+
+Other uses of the Bluetooth module including passing in input arguments for particular modes of operations, outputting status information about the robot and using this as a channel for debugging. These options were well used and were critical to saving a lot of development time and keeping the final project flexible.
 
 \subsection{Testing and Verification}
 
