--- a/Report/final_report.tex
+++ b/Report/final_report.tex
@@ -126,8 +126,6 @@ The Mini Project consists of designing a game on a FPGA device which incorporate
 
 This project consisted of the design and construction of part of an autonomous line following robot, which will complete certain benchmarks and can pick up all the "food pellets" in a given map. Much of the robot's hardware was prescribed and given to us in an assembled state for working on. The sensor circuit was the only important part of the hardware that needed to be completed as part of this project. The robot was controlled from a Cypress PSoC 5LP, which interfaced with the Sensors, RF, Bluetooth \&  Motors to allow the robot to meet its requirements. This report outlines the hardware and software considerations and decisions that were made as part of this project.
 
-\section{Robot Description}
-
 %----------------------------------------------------------------------------------------
 %	ANALOGUE SECION
 %----------------------------------------------------------------------------------------
@@ -135,7 +133,7 @@ This project consisted of the design and construction of part of an autonomous l
 
 \section{Analogue}
 
-The portion of the hardware that needed to be developed as part of this project centred around the collection and processing of vision information. This was in the form of a surface mounted phototransistor, the TEMT6200. The map is projected down from a ceiling mounted projector, where black lines represent lines and white areas symbolizes the walls. To be able to sense the difference between these and convey this information on to the PSoC is the aim of the analogue section of this project.
+The portion of the hardware that needed to be developed as part of this project centred around the collection and processing of vision information. This was in the form of a surface mounted phototransistor, the TEMT6200. The map is projected down from a ceiling mounted projector, where black lines represent lines and white areas symbolizes the walls. To be able to sense the difference between these and convey this information on to the PSoC is the aim of the analogue section of this project. The following sections outline the considerations and decisions the group made while developing the analogue components of this project.
 
 \subsection{Phototransistor output signal}
 
@@ -151,9 +149,11 @@ The next thing that needed to be considered was how the signal will be passed on
 
 The project requires a sensor circuit layout such that it can communicate as much information as possible about the current position of the robot to the PSoC, so that the robot can interpret the track well to make an informed decision on where to move to next. After doing much research into the intricacies of line following robots, it became apparent that a line could be followed with as few as two sensors.
 
-One sensor immediately on either side of the inside of the line is sufficient to track a line and follow it. These two sensors must be placed as far forward as possible so as to make the deviations of the robot more pronounced and easier to detect \& correct. This would result in the robot being able to follow the lines more smoothly and jerk a lot less than if the sensors were near the axis of the wheels.
+One sensor immediately on either side of the inside of the line is sufficient to track a line and follow it. These two sensors must be placed as far forward as possible so as to make the deviations of the robot more pronounced and easier to detect \& correct. This would result in the robot being able to follow the lines more smoothly and jerk a lot less than if the sensors were near the axis of the wheels. 
 
-In our project it is not sufficient for the robot to follow a line, it must also be able detect intersections and take 90° turns. For this purpose two addition sensors were used, these were placed on either side of the line slightly behind the front two sensors. These were placed forward so that when an intersection is detected by these sensors, there is enough of a braking distance for the robot to brake in time to take a turn at the intersection.
+To further dampen the oscillations, we need to be able to accurately know how far off the line the robot has deviated. For this purpose two additional sensors were added on either side of the line slightly behind the front two sensors. These two sensors allowed the robot to calculate how far off the line it had deviated and therefore apply the correct correction to get back onto the line. 
+
+In our project it is not sufficient for the robot to follow a line, it must also be able detect intersections and take 90° turns. For this purpose two addition sensors were used, these were placed extreme ends of the board at the front edge of the PCB. These were placed forward so that when an intersection is detected by these sensors, there is enough of a braking distance for the robot to brake in time to take a turn at the intersection. This was a later modification that was made when testing with the robot showed us that the centre four sensors are not sufficient to accurately track intersections.
 
 \subsection{PCB Design}
 
@@ -173,7 +173,15 @@ Connecting the H-bridges via traces would result in a cleaner design with no rog
 
 \subsection{Testing and Verification}
 
+Testing, Validation \& Verification of a analogue design are essential components of the development process. As part of our design project, we made sure every one of these steps were executed properly. The first stage that took place was verification of the design using LTSpice. During AC simulation it was found that we had made a calculation mistake with calculating the filter circuit capacitor, this was promptly corrected. Another issue that arose was the long response time with the Schmitt Trigger. This was found to be a result of the unnecessarily large capacitor placed in front of Schmitt trigger for smoothening the input signal. This capacitor was replaced with a capacitor of a slightly lower value to balance response time and correct operation of the circuit.
+
+During the validation stage of the development, where we tested the circuit on a breadboard, no further complications arose. We also decided to validate our sensor circuit thoughts, by strapping the breadboard onto the robot to see how well it followed the lines. By doing this we came to realize that using only two sensors was not sufficient to follow a line, and that additional sensors must be used. 
+
+During the verification stage of the sensor layout, we found that our sensor layout only allowed us to follow lines and not accurately track intersections. As being able to locate intersections are a key part of traversing the Pacman maze, this was a critical issue that needed to be resolved. This was rectified by moving the back two backup sensors to the front edges of the PCB. These sensors were placed such that they would go logic HIGH when the reached an intersection and not when the robot had deviated from the line.
+
 \subsection{Final Design}
+
+The final analogue circuit design used the light sensor phototransistors in the common emitter configuration. This signal was then filtered using a simple RC high pass filter and gain stages followed by a peak detector and Schmitt trigger circuit. This yielded an accurate output of logic HIGH for on the line and logic LOW for off the line. The PCB was designed using the `Rooms' feature in Altium Designer to minimize development time for identical circuits. The PCB used SMD components to minimize board usage and fit all the required components in the given area.
 
 %----------------------------------------------------------------------------------------
 %	DIGITAL SECION
@@ -181,6 +189,8 @@ Connecting the H-bridges via traces would result in a cleaner design with no rog
 % Mention considerations and decisions here
 
 \section{Digital}
+
+The majority of the project that needed to be developed was part of the digital section, this was implemented in C for execution on the PSoC 5LP used in this project. This portion of the project needed to take in inputs from RF data, Quadrature decoder readings and light sensor data coming from the analogue section of this project. These inputs need to be processed in such a way that the robot knows where it is currently at. Along with the path finding algorithms used in this project, the robot should be able to move to next target location using the shortest path. For level 1 this means traversing the entire map in the minimum amount of moves and for level 2, this means collecting the pre-specified food pallets in the shortest number of movements. This section of the report covers the findings and design considerations that were made while these solutions were developed.
 
 \subsection{Path Finding Algorithms}
 
@@ -220,9 +230,21 @@ Other uses of the Bluetooth module including passing in input arguments for part
 
 \subsection{Data Structures}
 
+The is a large amount of data that is being collected and processed by the robot while in operation. Although primitive data types can be used to store and process this data, this is not the ideal situation for execution or for the programmer. The use of data structures was an essential part of this project to ensure that the data being used is stored in an organized manner and can be used as efficiently as possible. 
+
+As we are programming a microcontroller and we are thus trying to keep memory usage and data usage low, the uses of complex data structures like linked lists and classes were avoided. This is because they added significant overhead that was not seen as worthy. Data structures that were used in this project include arrays and structs.
+
+One dimensional and two dimensional arrays were extensively in the line following algorithms used in the project. They were used to effectively and efficiently store and access the map data, the path the robot has taken, the path the robot should take, where the food pallets are located, etc. Structs were used to receive and access the RF data coming from the project control PC, so as to track the current robot position accurately.
+
 \subsection{Testing and Verification}
 
+The implementation of the two path finding algorithms were first testing using GCC \& GDB to compile and debug the code being worked on. Once this gave satisfactory results, the code was recompiled using the PSoC Creator environment and run and on the PSoC itself. This method of testing \& verification was used as the debugging tools on the PSoC environment were not as easy to use as that provided by GCC \& GDB. The only issue with this process was that sometimes, the program would use more memory than the PSoC had. To ensure this didn't cause any problems, the algorithms were developed with a low memory footprint in mind.
+
+The PID \& motor control part of the code was testing by using the Bluetooth module to send back data from the robot to the computer from the quadrature decoders and RF signal. This data was later plotted and analysed using MATLAB to verify the correct operation of the PID controller. Tuning the PID controller was quite tedious as we had to repeatedly change the tuning values, collect the data and analyse this data.
+
 \subsection{Final Design}
+
+Both the A* and DFS algorithms were used in the final design. The A* algorithm was used for level 2 to find the shortest path to the next food pallet. The DFS algorithm was used in level1 to transverse the entire map in an efficient manner. The PID controller was used in the final implementation to ensure the motor were travelling at the desired speed with minimal oscillations.
 
 %----------------------------------------------------------------------------------------
 %	CONCLUSIONS
